--- a/html/partials/html_navbar.html
+++ b/html/partials/html_navbar.html
@@ -1,7 +1,8 @@
 <!-- html_navbar.html -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+ <!-- Navbar -->
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Projekt</a>
+        <a class="navbar-brand" href="#">Wiener Schnitzler</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -14,7 +15,8 @@
                     <ul class="dropdown-menu" aria-labelledby="projektDropdown">
                         <li><a class="dropdown-item" href="#">Zum Projekt</a></li>
                         <li><a class="dropdown-item" href="#">FAQ</a></li>
-                        <li><a class="dropdown-item" href="#">Team</a></li>
+                        <li><a class="dropdown-item" href="#">Kontakt</a></li>
+                        <li><a class="dropdown-item" href="#">Impressum</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -22,10 +24,10 @@
                         Zeiträume
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="zeitDropdown">
-                        <li><a class="dropdown-item" href="#">Tage</a></li>
+                        <li><a class="dropdown-item" href="tag.html">Einzelne Tage</a></li>
                         <li><a class="dropdown-item" href="#">Monate</a></li>
                         <li><a class="dropdown-item" href="#">Jahre</a></li>
-                        <li><a class="dropdown-item" href="#">Dekaden</a></li>\n                    </ul>
+                        <li><a class="dropdown-item" href="#">Dekaden</a></li>                    </ul>
                 </li>
             </ul>
         </div>
