--- a/html/partials/html_footer.html
+++ b/html/partials/html_footer.html
@@ -1,14 +1,16 @@
 <!-- html_footer.html -->
 <footer class="bg-light text-center py-4">
     <div class="container">
-        <p>Ein Projekt von:</p>
         <div class="row">
             <div class="col-md-6 text-center">
-                <img src="./images/wmv-logo.jpg" alt="Logo Wiener Moderne Verein" class="img-fluid my-2">
+                <p>Ein Projekt von:</p>
+                <img src="./images/wmv-logo-white.jpg" alt="Logo Wiener Moderne Verein" class="img-fluid my-2" width="100px">
+                
                 <p>Wiener Moderne Verein<br>Hebragasse 4/19<br>1090 Wien</p>
             </div>
             <div class="col-md-6 text-center">
-                <img src="./images/Stadt_Wien_Kultur_pos_rgb.jpg" alt="Logo Stadt Wien Kultur" class="img-fluid my-2">
+                <img src="./images/Stadt_Wien_Kultur_pos_rgb.jpg" alt="Logo Stadt Wien Kultur" class="img-fluid my-2" width="100px"
+                 >
                 <p>Gefördert von der Stadt
                     Wien Kultur (2024–2025)</p>
             </div>
