--- a/html/partials/html_footer.html
+++ b/html/partials/html_footer.html
@@ -1,15 +1,15 @@
 <!-- html_footer.html -->
-<footer class="bg-light text-center py-4">
+<footer class="text-center py-4">
     <div class="container">
         <div class="row">
             <div class="col-md-6 text-center">
                 <p>Ein Projekt von:</p>
-                <img src="./images/wmv-logo-white.jpg" alt="Logo Wiener Moderne Verein" class="img-fluid my-2" width="100px">
+                <img src="./images/wmv-logo-white.jpg" alt="Logo Wiener Moderne Verein" class="img-fluid my-2" width="200px">
                 
                 <p>Wiener Moderne Verein<br>Hebragasse 4/19<br>1090 Wien</p>
             </div>
             <div class="col-md-6 text-center">
-                <img src="./images/Stadt_Wien_Kultur_pos_rgb.jpg" alt="Logo Stadt Wien Kultur" class="img-fluid my-2" width="100px"
+                <img src="./images/Stadt_Wien_Kultur_pos_rgb.jpg" alt="Logo Stadt Wien Kultur" class="img-fluid my-2" width="200px"
                  >
                 <p>Gefördert von der Stadt
                     Wien Kultur (2024–2025)</p>
