--- a/html/partials/html_navbar.html
+++ b/html/partials/html_navbar.html
@@ -24,7 +24,7 @@
                         Zeiträume
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="zeitDropdown">
-                        <li><a class="dropdown-item" href="tag.html">Einzelne Tage</a></li>
+                        <li><a class="dropdown-item" href="tag.html">Tag für Tag</a></li>
                         <li><a class="dropdown-item" href="#">Monate</a></li>
                         <li><a class="dropdown-item" href="#">Jahre</a></li>
                         <li><a class="dropdown-item" href="#">Dekaden</a></li>                    </ul>
