dies und das. und für’n peter die bezugnahme auf die farbe korrigiert

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -21,7 +21,7 @@ h1 {
     border: 1px solid #ccc;
 }
 
-.chronik-pill {
+.pill {
     border-radius: 50px; /* Rundungen für die Pille */
     background-color: #C67F53; /* Hintergrundfarbe */
     color: white; /* Textfarbe */
@@ -32,7 +32,7 @@ h1 {
     text-align: center; /* Textzentrierung */
 }
 
-.chronik-pill:hover {
+.pill:hover {
     background-color: #A15F40; /* Etwas dunkler bei Hover */
     cursor: pointer; /* Zeigt den Pointer-Cursor an */
 }
